# consents-api

./: .env  .env-template  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  remove-migrations.py
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: backend_pre_start.py  crud.py  initial_data.py  main.py  models.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: consents.py  login.py
backend/app/app/: settings.py  urls.py
backend/app/auth/: admin.py  models.py  serializers.py  utils.py  viewsets.py
backend/app/consents/: models.py  viewsets.py
backend/app/core/: config.py  db.py  engine.py  security.py
backend/app/entities/: base.py  consent_petitions.py
backend/app/models/: base.py  consent.py  consent_history.py  consent_petitions.py  user.py
backend/app/routers/: consents.py
backend/app/services/: auth.py  users.py
backend/app/services/impl/: auth.py  users.py
backend/app/services/persistence/: traceable.py  unit_of_work.py
backend/app/services/persistence/web3/: pontusx.py
backend/scripts/: prestart.sh
consents_api/: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  docker-compose.yml  pyproject.toml
consents_api/consents_api/: __init__.py  __main__.py  log.py  settings.py
consents_api/deploy/: docker-compose.dev.yml
consents_api/tests/: __init__.py  conftest.py  test_consent.py  test_dummy.py
frontend/nextjs/: bun.lockb  next.config.ts  package-lock.json  package.json  tailwind.config.ts
scripts/: remove-migrations.py
(+170 files in other folders)
